--- a/style.css
+++ b/style.css
@@ -1,16 +1,9 @@
-/* Regras */
 @charset 'UTF-8';
 
-/* Reset CSS */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-*, input, button, a {
-  font-family: Arial, sans-serif;
-  text-decoration: none;
 }
 
 html, body {
@@ -18,145 +11,147 @@ html, body {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
 }
 
-/* Styles */
-
 .menu {
+  display: flex;
+  justify-content: space-between;
   height: 48px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.menu__section {
-  display: flex;
   align-items: center;
 }
 
-.menu__section.left {
+.menu__items.left {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.menu__burguer{
   padding: 12px 16px;
 }
 
-.menu__link {
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 600;
-  color: #757575;
-  padding: 12px 8px;
+.menu__items a {
+  color: #70757a;
   text-decoration: none;
+  margin-right: 8px;
+  padding: 0 8px;
+  text-transform: uppercase;
+  line-height: 46px;
 }
 
-.menu__link.active {
-  color: #4585f4;
-  border-bottom: 2px solid #4585f4;
-  margin-left: 10px;
-}
-
-.menu__link:not(.active) {
+.menu__items a:not(.menu__active) {
   margin-bottom: 2px;
 }
 
-.menu__section.right {
-  margin-right: 4px;
+a.menu__active {
+  border-bottom: 2px solid #4285f4;
+  color: #4285f4;
 }
 
-.menu__section.right .menu__icon {
-  padding: 12px;
+.menu__items.right {
+  display: flex;
+  align-items: center;
+  padding-right: 4px;
 }
 
 .menu__profile {
-  padding: 4px;
-  width: 40px;
-  height: 40px;
-  position: relative;
+  padding: 8px;
+  border-radius: 50px;
 }
 
-.menu__avatar {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
+.menu__more {
+  padding: 12px;
 }
 
-.menu__avatar--frame {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-/* Main */
 .content {
   display: flex;
   flex: 1;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  padding: 58px 8px 0;
+}
+
+.content__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 58px 0 0 0;
 }
 
 .content__logo {
+  width: 160px;
   height: 56px;
+  margin-bottom: 27px;
 }
 
 .content__search {
-  margin-top: 18px;
-  width: 100%;
-  max-width: 736px;
-  padding: 7px 10px 6px 20px;
-  font-size: 18px;
-  color: rgba(0, 0, 0, 0.87);
-  background: transparent;
-  border-radius: 25px;
+  width: 360px;
+  height: 40px;
   border: 1px solid #dadce0;
-  outline: 0;
+  background: transparent;
+  border-radius: 20px;
 }
 
-.content__offer {
-  margin-top: 24px;
-  font-size: 13px;
-  padding: 6px 12px;
+.content__disp {
+  padding: 0 12px;
+  font-size: small;
+  margin: 24px 0;
 }
 
-.content__offer a{
+.content__disp a {
+  color: #4285f4;
   text-decoration: none;
-  color: #1967d2;
+  padding: 0px 8px;
 }
 
-/* Footer */
+.content__sub {
+  width: 100%;
+}
 
 .footer {
+  background: #f2f2f2;
   display: flex;
   flex-direction: column;
-  margin-top: 24px;
+}
+
+.content__country {
   background: #f2f2f2;
-}
-
-.footer__section:not(:first-child){
-  border-top: 1px solid #e4e4e4;
-}
-
-.footer__location {
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.54);
+  text-align: left;
+  line-height: 35px;
+  padding-left: 12px;
+  color: #0000008A;
   font-size: 16px;
-  color: #5f6368;
-  padding: 10px 12px;
 }
 
-.footer__links {
+.content__location {
+  background: #f2f2f2;
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.54);
+  padding: 15px 0;
+}
+
+.footer__options {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  color: #70757a;
   font-size: 13px;
-  color: #5f6368;
-  padding: 10px;
 }
 
-.footer__links a:not(:first-child){
-  margin-left: 27px;
+.footer__options ul {
+  list-style: none;
+  display: inline-block;
+  margin: 10px auto;
 }
 
-
-.footer__links a:visited {
-  color: #5f6368;
+.footer__options li {
+  display: inline;
+  padding-left: 27px;
 }
